Fixed various google-maps bugs including the form taking in the wrong data. Shifted the geocoder code from app.js to routes/campground.js

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,7 +7,7 @@
     margin-bottom: 1.5em;
 }
 
-#navbar {
+nav {
     margin-bottom: 3em;
 }
 
@@ -28,4 +28,9 @@
 #map {
     height: 400px;
     width: 100%;
+    border-radius: 5px;
+}
+
+#show-list {
+    margin-bottom: 1em;
 }
